--- a/site.css
+++ b/site.css
@@ -1,3 +1,7 @@
 body {
   font-family:"ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro",Osaka, "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
 }
+
+p inline-span {
+  display:inline-block;
+}
