--- a/site.css
+++ b/site.css
@@ -2,6 +2,6 @@ body {
   font-family:"ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro",Osaka, "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
 }
 
-p inline-span {
+.inline-span {
   display:inline-block;
 }
